documentation for bean validation

--- a/src/main/resources/ValidationMessages_de.properties
+++ b/src/main/resources/ValidationMessages_de.properties
@@ -1,1 +1,4 @@
+# SNIPPET START: hibernatevalidator3
+# ValidationMessages_de.properties
 sighting.memo.minLength=Muss mindestens {min} Zeichen lang sein
+# SNIPPET START: hibernatevalidator3
