--- a/src/main/resources/ValidationMessages_en.properties
+++ b/src/main/resources/ValidationMessages_en.properties
@@ -1,1 +1,4 @@
+# SNIPPET START: hibernatevalidator4
+# ValidationMessages_en.properties
 sighting.memo.minLength=Must be at least {min} characters long.
+# SNIPPET START: hibernatevalidator4
