added feature and documentation about application cache

--- a/src/main/webapp/locales/de/translation.json
+++ b/src/main/webapp/locales/de/translation.json
@@ -17,6 +17,10 @@
 	"translation":{
 		"new":"Neue Übersetzung"
 	},
+	"appCache": {
+		"update":"Auf Aktualisierung prüfen",
+		"swap":"Aktualisierung aktivieren"
+	},
 	"glb":{
 		"cancel":"Abbrechen",
 		"save":"Speichern",
