simplified query by example

--- a/src/main/webapp/locales/de/vessel.json
+++ b/src/main/webapp/locales/de/vessel.json
@@ -2,6 +2,7 @@
 	"vessel":{
 		"new":{"title":"Neuer Schiffstyp"},
 		"edit":{"title":"Schiffstyp bearbeiten"},
+		"searchEdit":"Schiffstyp suchen/pflegen",
 		"name":"Name",
 		"heading":"Schiffstypen pflegen",
 		"list":"Schiffstypen"
